<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ronald.app1andorid.actLogin">

    <item android:id="@+id/action_New" android:title="@string/action_New"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_amigos" android:title="@string/action_amigos"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_chat" android:title="@string/action_chat"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_Contacto" android:title="@string/action_Contacto"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="100" app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>
</menu>
